--- a/project_files/style.css
+++ b/project_files/style.css
@@ -505,16 +505,19 @@ body.dark-mode .hero-image img:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: auto;
+    max-height: auto;  
   }
 
   .hero-text, .hero-image {
-    width: 60%;
+    max-width: auto;
+    max-height: auto;
     margin-bottom: 20px;
   }
 
   .profile-img {
-    width: 150px; /* Reduce image size for mobile */
-    height: 150px;
+    max-width: auto;
+    max-height: auto;    
     object-fit: cover;
     border-radius: 50%;
   }
@@ -526,6 +529,8 @@ body.dark-mode .hero-image img:hover {
   }
 
   .social-links {
+    max-width: auto;
+    max-height: auto;    
     display: flex;
     flex-direction: column;
     align-items: center;
